--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,9 @@
 /**
-* Template Name: ApMaintenances
+* Template Name: AP BUILDING MAINTENENCE
 * Updated: Mar 10 2023 with Bootstrap v5.2.3
-* Template URL: https://ApMaintenances.com/ApMaintenances-bootstrap-construction-website-template/
-* Author: ApMaintenances.com
-* License: https://ApMaintenances.com/license/
+* Template URL: https://AP BUILDING MAINTENENCE.com/AP BUILDING MAINTENENCE-bootstrap-construction-website-template/
+* Author: AP BUILDING MAINTENENCE.com
+* License: https://AP BUILDING MAINTENENCE.com/license/
 */
 
 /*--------------------------------------------------------------
