--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2486,6 +2486,10 @@ section {
     justify-content: space-between;
 }
 
+.title-footer{
+  color: var(--color-primary);
+}
+
 section#shadow-host-companion {
   display: none;
 }
